--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Our Story of Xuan&Lu</title>
+		<title>蕾宝宝看这里</title>
 	    
         <link type="text/css" rel="stylesheet" href="default.css">
 		<script type="text/javascript" src="jquery.js"></script>
@@ -34,27 +34,29 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say">To 1</span><br>
+			        	<span class="say">To 宝宝</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 2 </span><br>
+			        	<span class="say">// 慢慢喜欢你 </span><br>
 						<span class="say"> </span><br>
-                        <span class="say">// 3</span><br>
+                                        <span class="say">// 慢慢地亲密</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 4</span><br>
+			        	<span class="say">// 慢慢聊自己</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 5</span><br>
+			        	<span class="say">// 慢慢和你走在一起</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 6</span><br>
+			        	<span class="say">// 慢慢我想配合你</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 7</span><br>
+			        	<span class="say">// 慢慢把我给你</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">// 8</span><br>
-                        <span class="say"> </span><br>
-                        <span class="say">// 9</span><br>
+			        	<span class="say">// 慢慢喜欢你</span><br>
+                                                <span class="say"> </span><br>
+                                        <span class="say">// 慢慢地回忆</span><br>
 						<span class="say"> </span><br>
-						<span class="say">// 0</span><br>
+				        <span class="say">// 慢慢地陪你慢慢地老去</span><br>
+					        <span class="say"> </span><br>
+				        <span class="say">// 因为慢慢是个最好的原因</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>From 1</span>
+                        <span class="say"><span class="space"></span>From 笨笨</span>
 			        </div>
                 </div>
                 <div id="clock-box">
@@ -199,9 +201,9 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2012, 10, 01); 			//时间年月日
-		    together.setHours(14);						//小时	
-		    together.setMinutes(15);					//分钟
+		    together.setFullYear(2020, 07, 05); 			//时间年月日
+		    together.setHours(20);						//小时	
+		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
 		    together.setMilliseconds(0);				//秒第二位
 
